--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,17 @@
-FROM node:14
+FROM node:16-alpine
 
+# Set the working directory
 WORKDIR /app
 
-COPY package.json ./
-COPY package-lock.json ./
-
+# Copy package.json and install dependencies
+COPY package*.json ./
 RUN npm install
 
+# Copy the rest of the frontend code
 COPY . .
 
+# Expose the frontend port
+EXPOSE 3000
+
+# Start the frontend server
 CMD ["npm", "start"]
