--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,19 +4,19 @@
   "description": "Frontend for eBay sales tool to assist in selling and tracking items on eBay.",
   "main": "src/App.js",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "axios": "^0.21.1"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "react-scripts": "4.0.3"
+    "react-scripts": "^5.0.1"
   },
   "eslintConfig": {
     "extends": [
