--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "build": "echo 'No build step required for backend'"
+    "build": "echo 'No build step required for backend'",
+    "prepare-lock": "npm install --package-lock-only"
   },
   "dependencies": {
     "axios": "^1.8.4",
-    "dotenv": "^8.2.0",
-    "express": "^4.21.2",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "mongoose": "^8.13.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
