--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
+    "ebay-sales-tool-backend": "file:",
     "express": "^5.1.0",
     "mongoose": "^8.13.2",
     "swagger-jsdoc": "^6.2.8",
