--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "ebay-sales-tool-backend": "file:",
     "express": "^5.1.0",
     "mongoose": "^8.13.2",
+    "pg": "^8.11.1",
+    "sequelize": "^6.32.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
