Full project check-in: operational build, updated scripts, docs, and all recent changes

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,6 +13,7 @@ RUN npm install
 # Copy only necessary files
 COPY package*.json ./
 COPY src ./src
+COPY database/seeds ./database/seeds
 
 # Expose the application port
 EXPOSE 3000
