--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,44 +5,36 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
-    volumes:
-      - type: bind
-        source: /mnt/f/Dev/eBaySalesTool/backend/src
-        target: /app/src
-      - type: bind
-        source: /mnt/f/Dev/eBaySalesTool/backend/models
-        target: /app/models
-      - type: bind
-        source: /mnt/f/Dev/eBaySalesTool/backend/package.json
-        target: /app/package.json
-      # Updated to use absolute paths for WSL compatibility
     environment:
       - NODE_ENV=development
-      - MONGODB_URI=mongodb://database:27017/ebay-sales-tool # Update MongoDB URI
       - PG_HOST=database
-
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: ./Dockerfile
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./frontend:/app
-    environment:
-      - REACT_APP_API_URL=http://localhost:5000
+      - PG_USER=postgres
+      - PG_PASSWORD=password
+      - PG_DATABASE=ebay_sales_tool
+      - PG_PORT=5432
+    working_dir: /usr/src/app
+    command: ["node", "src/app.js"]
+    depends_on:
+      - database
 
   database:
-    image: postgres:latest
+    image: postgres:15-alpine
     container_name: postgres_db
-    ports:
-      - "5432:5432"
+    restart: always
     environment:
+      POSTGRES_DB: ebay_sales_tool
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: ebay_sales_tool
+    ports:
+      - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./database/migrations:/docker-entrypoint-initdb.d:ro
+      - db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
-  postgres_data:
+  db_data:
