--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "pg": "^8.11.1",
     "sequelize": "^6.32.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
