--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "build": "echo 'No build step required for backend'",
-    "prepare-lock": "npm install --package-lock-only"
+    "prepare-lock": "npm install --package-lock-only",
+    "test": "node ../scripts/test-api.js"
   },
   "dependencies": {
     "axios": "^1.8.4",
@@ -22,7 +23,10 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
+    "nodemon": "^2.0.7",
+    "supertest": "^7.1.1"
   },
   "author": "Your Name",
   "license": "MIT",
