--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ Thumbs.db
 scripts/npm_cleanup_and_install.bat
 scripts/docker_prune.bat
 scripts/npm_warnings.log
+
+# Ignore WSL2 and Docker Desktop virtual disk images
+Ubuntu/
+docker-desktop/
