--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "5000:5000"
     environment:
       - NODE_ENV=development
-      - PG_HOST=database
+      - PG_HOST=postgres_db
       - PG_USER=postgres
       - PG_PASSWORD=password
       - PG_DATABASE=ebay_sales_tool
@@ -63,9 +63,7 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=development
-    volumes:
-      - ./frontend/src:/usr/src/app/src:ro
-      - ./frontend/public:/usr/src/app/public:ro
+    volumes: []
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:3000 || exit 1"]
       interval: 10s
