--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start": "node --max-old-space-size=4096 src/app.js",
     "dev": "nodemon --exec 'node --max-old-space-size=4096' src/app.js",
     "prepare-lock": "npm install --package-lock-only",
-    "test": "node --max-old-space-size=4096 ../scripts/testApi.js"
+    "test": "node --max-old-space-size=4096 ../scripts/testApi.js",
+    "build": "echo No build step required"
   },
   "dependencies": {
     "axios": "^1.8.4",
