--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,15 +3,15 @@ FROM node:16-alpine
 # Set the working directory
 WORKDIR /app
 
-# Copy package.json and install dependencies
+# Copy only package.json and package-lock.json first, then install dependencies
 COPY package*.json ./
 RUN npm install
 
-# Install 'serve' to serve static build
-RUN npm install -g serve
+# Install 'curl' for healthcheck and 'serve' to serve static build
+RUN apk add --no-cache curl && npm install -g serve
 
-# Copy the rest of the application files
-COPY . /app
+# Copy the rest of the application files (excluding node_modules and build)
+COPY . .
 
 # Build the React app for production
 RUN npm run build
@@ -20,4 +20,4 @@ RUN npm run build
 EXPOSE 3000
 
 # Serve the production build
-CMD ["serve", "-s", "build", "-l", "3000"]
+CMD ["npx", "serve", "-s", "build", "-l", "3000"]
