--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,9 @@
   "description": "Frontend for eBay sales tool to assist in selling and tracking items on eBay.",
   "main": "src/App.js",
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider --max-old-space-size=4096 && react-scripts start",
+    "build": "set NODE_OPTIONS=--max-old-space-size=4096 && react-scripts build",
+    
     "eject": "react-scripts eject",
     "prepare-lock": "npm install --package-lock-only"
   },
