--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,10 @@
     "start": "node --max-old-space-size=4096 src/app.js",
     "dev": "nodemon --exec 'node --max-old-space-size=4096' src/app.js",
     "prepare-lock": "npm install --package-lock-only",
-    "test": "node --max-old-space-size=4096 ../scripts/testApi.js",
-    "build": "echo No build step required"
+    "test": "jest --runInBand --detectOpenHandles=false",
+  "test:detect-open-handles": "jest --runInBand --detectOpenHandles --maxWorkers=1",
+    "build": "echo No build step required",
+    "lint": "eslint src --ext .js"
   },
   "dependencies": {
     "axios": "^1.8.4",
@@ -28,7 +30,8 @@
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "nodemon": "^2.0.7",
-    "supertest": "^7.1.1"
+    "supertest": "^7.1.1",
+    "eslint": "^8.57.0"
   },
   "author": "Your Name",
   "license": "MIT",
