feat: split sku_barcode into sku+barcode, move serial_number to listing, admin subtabs + URL catalog, listing default status config, table filters/persistence

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,9 @@
 # Use Node.js 18 as the base image
 FROM node:18-alpine
 
+# Allow cache busting when seed files change
+ARG SEED_VERSION=dev
+
 # Set the working directory
 WORKDIR /usr/src/app
 
@@ -16,6 +19,8 @@ RUN apk add --no-cache curl
 # Copy only necessary files
 COPY package*.json ./
 COPY src ./src
+# Copy seed version marker first (if exists) then full seeds to force layer invalidation when version changes
+COPY database/seeds/.seed_version ./database/seeds/.seed_version
 COPY database/seeds ./database/seeds
 
 # Generate swagger.json inside the image (merge fragments)
