--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "ebay-sales-tool-frontend": "file:",
-    "ebaysalestool": "file:..",
+  "listflowhq": "file:..",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.0"
