tests: ensure alert-history table exists in test helper; DI model/init progress

--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,35 @@
-# eBay Integration Environment Example (DO NOT COMMIT REAL SECRETS)
-# Copy to .env (root) or backend/.env and fill in real values. Keep secrets out of version control.
+# LOCAL DEVELOPMENT ENV (DO NOT COMMIT REAL SECRETS)
+# Fill in the placeholders below with your real values.
+# Copy of .env.example plus inline TODO markers.
 
 # --- Core Feature Flags ---
 EBAY_PUBLISH_ENABLED=true
 EBAY_SNAPSHOTS_ENABLED=true
-EBAY_RECON_ENABLED=false
-EBAY_POLICY_ENABLED=false
+EBAY_RECON_ENABLED=false           # enable later after initial publishes (set true to test reconciliation)
+EBAY_POLICY_ENABLED=false          # set true if you want to fetch policies immediately
 
 # --- eBay API (Sandbox) ---
-# For sandbox, base URL typically https://api.sandbox.ebay.com
 EBAY_API_BASE_URL=https://api.sandbox.ebay.com
-# Short-lived OAuth user token (access token). Rotate frequently.
-EBAY_API_OAUTH_TOKEN=REPLACE_ACCESS_TOKEN
-# Optional refresh (only if you have a long-lived refresh token grant):
+EBAY_API_OAUTH_TOKEN=__FILL_ACCESS_TOKEN__        # Paste short-lived OAuth user access token when obtained
 EBAY_API_REFRESH_URL=https://api.sandbox.ebay.com/identity/v1/oauth2/token
-EBAY_API_REFRESH_CLIENT=REPLACE_CLIENT_ID
-EBAY_API_REFRESH_SECRET=REPLACE_CLIENT_SECRET
-EBAY_API_REFRESH_TOKEN=REPLACE_REFRESH_TOKEN
+EBAY_API_REFRESH_CLIENT=__FILL_EBAY_REFRESH_CLIENT__
+EBAY_API_REFRESH_SECRET=__FILL_EBAY_REFRESH_SECRET__
+EBAY_API_REFRESH_TOKEN=__FILL_REFRESH_TOKEN__     # Obtain a long‑lived refresh token (user consent flow)
+EBAY_API_DEV_ID=__FILL_EBAY_DEV_ID__
+
+# --- OAuth (tokenManager expects these names) ---
+EBAY_OAUTH_CLIENT_ID=__FILL_EBAY_OAUTH_CLIENT_ID__
+EBAY_OAUTH_CLIENT_SECRET=__FILL_EBAY_OAUTH_CLIENT_SECRET__
+EBAY_OAUTH_REFRESH_TOKEN=__FILL_REFRESH_TOKEN__
+EBAY_OAUTH_TOKEN_URL=https://api.sandbox.ebay.com/identity/v1/oauth2/token
+EBAY_OAUTH_SCOPE=https://api.ebay.com/oauth/api_scope # add additional space‑delimited scopes as needed
 
 # --- Adapter Behavior ---
 EBAY_API_TIMEOUT_MS=8000
 EBAY_RATE_LIMIT_RPS=5
-# Backoff / attempts
 EBAY_PUBLISH_MAX_ATTEMPTS=6
 
-# --- Queue / Alert Thresholds (tune as needed) ---
+# --- Queue / Alert Thresholds ---
 EBAY_QUEUE_BACKLOG_READY_THRESHOLD=50
 QUEUE_WAIT_SAMPLES_CAP=2000
 QUEUE_MAX_WAIT_DECAY_WINDOW_MS=0
@@ -38,7 +43,7 @@ EBAY_POLICY_TYPES=shipping,return,payment
 EBAY_POLICY_TTL_SEC=3600
 EBAY_POLICY_IMPACT_ENABLED=false
 
-# --- Metrics / Suppression (optional) ---
+# --- Metrics / Suppression (tune) ---
 ALERT_SUPPRESSION_WINDOW_SEC=60
 ALERT_SUPPRESSION_PER_KEY_OVERRIDE=queue_latency_burn_rate:30
 
@@ -47,10 +52,13 @@ PGHOST=localhost
 PGPORT=5432
 PGDATABASE=ebaytool
 PGUSER=ebaytool
-PGPASSWORD=CHANGEME
+PGPASSWORD=__FILL_DB_PASSWORD__    # TODO: local DB password
 
-# --- Node / Misc ---
+# --- App ---
 NODE_ENV=development
 PORT=5000
 
-# SECURITY NOTE: Never commit a real .env file. Use secret managers in CI/Prod.
+# --- Optional Logging Tweaks ---
+LOG_LEVEL=info
+
+# SECURITY: Never commit this file with secrets. Add /.env to .gitignore if not present.
